--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
 body{
     background-color: #000000;
-  }
+    font-family: "Lexend", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
   
 .oi{
     color: #00ffff;
